Fixed overflow on widget

--- a/src/pages/PluginPages/PluginVideoDetails/style.module.scss
+++ b/src/pages/PluginPages/PluginVideoDetails/style.module.scss
@@ -1,5 +1,10 @@
 @import '../../../styles/variables.scss';
 
+.pageContainer {
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+}
+
 .backButtonContainer {
   padding-top: 12px;
   padding-left: 20px;
